regression-tests/test-results/clang-15-c++20-libcpp/pure2-default-arguments.cpp.output
pure2-default-arguments.cpp2:6:77: error: no member named 'source_location' in namespace 'std'
    cpp2::impl::in<char const*> fn = CPP2_UFCS_NONLOCAL(function_name)(std::source_location::current())
                                                                       ~~~~~^
1 error generated.
